tests/errors/references/lambda_nested_captures_env_const_imm_fn.duck
fn main() {
    let a = 100;
    const f = fn () {
        const inner_f = fn() {
            a = 200;
        };
    };
}
